--- a/src/pages/GanttChartv2.page
+++ b/src/pages/GanttChartv2.page
@@ -56,6 +56,13 @@
                 .important .gantt_task_progress{
                     background: #ff7775;
                 }
+
+               .gantt_task_cell.week_end{
+					background-color: #EFF5FD;
+				}
+				.gantt_task_row.gantt_selected .gantt_task_cell.week_end{
+					background-color: #F8EC9C;
+				}
             </style>
         </head>
         <body>
@@ -93,9 +100,33 @@
                 parent : '',
                 status:''
             };
-            
-             //Get the contacts
             var contacts = [];
+            var demo_tasks;
+            const bgLoaderDiv = document.getElementsByClassName('bg-loading');
+            var projectId = '{!$CurrentPage.parameters.id}';
+            var holidays = [];
+
+            //Get the status
+            var taskStatus = [
+	            {key:"Open",label:"Open"},
+	            {key:"In Progress",label:"In Progress"},
+	            {key:"Resolved",label:"Resolved"},
+	            {key:"Closed",label:"Closed"},
+	            {key:"Close",label:"Close"}
+	        ];
+
+	        gantt.locale.labels.section_assignedTo = "Assigned To";  
+            gantt.locale.labels.section_status = "Status";  
+            gantt.config.lightbox.sections = [
+                {name: "description", height: 38, map_to: "text", type: "textarea", focus: true},
+                {name: "status", height: 22, map_to: "status", type: "select", options:taskStatus},
+                {name: "assignedTo", height: 22, map_to: "assignedTo", type: "select", options:contacts},
+                {name: "time", type: "duration", map_to: "auto"}
+            ];
+
+
+
+            //Get the contacts
             GanttChartv2_Ctrl.getContacts( function(result,event) {
                 // body...
                 if(event.status) {
@@ -108,64 +139,86 @@
                     alert('got an exception '+event.message);
                 }
             });
-            
-            var demo_tasks;
-            const bgLoaderDiv = document.getElementsByClassName('bg-loading');
-            //Get the Project-Task data - in - JsonData
-            var projectId = '{!$CurrentPage.parameters.id}';
-            console.log('projectId '+projectId);
-            GanttChartv2_Ctrl.getProjectInfo( projectId,function(result,event) {
+
+            //Get the List-Of-Holidays
+            GanttChartv2_Ctrl.getHolidays(function(result,event) {
                 // body...
                 if(event.status) {
                     console.log(result); 
-                    demo_tasks = result;
+                    result.forEach(function(holiday) {
+                        holidays.push(new Date(holiday.ActivityDate));
+                    });   
+
+                     console.log(holidays);
+			           for(var i=0; i < holidays.length; i++){
+							gantt.setWorkTime({
+								date:holidays[i],
+								hours:false
+							});
+						}
+
+					/*
+					var dateToStr = gantt.date.date_to_str("%d %M");
+					gantt.message("Following holidays are excluded from working time:");
+
+					for(var i =0; i < result.length; i++){
+                        // gantt.message(holiday.Name+' on '+holiday.ActivityDate);
+                        setTimeout(
+							(function(i){
+								return function(){
+									 gantt.message(result[i].Name+' on '+dateToStr(new Date(result[i].ActivityDate)));
+								} })(i)
+							,
+							(i+1)*600
+						);
+                    }  */
+
+				
+				
                     
-                    gantt.init("gantt_here");
-                    gantt.parse(demo_tasks);
-                    /* gantt.templates.task_text=function(start,end,task){
-                        return "<b>Text:</b> "+task.text+",<b> Holders:</b> "+contacts.find(x => x.id == task.assignedTo ).label;
-                    };*/
-                    bgLoaderDiv[0].style.display = 'none';
                 }else {
                     alert('got an exception '+event.message);
                 }
             });
             
-           //defines the style of task bars
-            /*  gantt.templates.grid_row_class = gantt.templates.task_row_class = function(start, end, task){
-                return "custom_row";
-            };
-    
-            gantt.templates.task_class=function(start,end,task){
-                if(task.progress > 0.5){
-                     return "";
-                }else{
-                    return "important";
-                }
-            };*/
+          
+            //Get the Project-Task data - in - JsonData
+            console.log('projectId '+projectId);
+            GanttChartv2_Ctrl.getProjectInfo( projectId,function(result,event) {
+                // body...
+                if(event.status) {
+                    console.log(result); 
 
-            //Get the status
-            var taskStatus = [
-	            {key:"Open",label:"Open"},
-	            {key:"In Progress",label:"In Progress"},
-	            {key:"Resolved",label:"Resolved"},
-	            {key:"Closed",label:"Closed"},
-	            {key:"Close",label:"Close"}
-	        ];
-	        
-	        
-            gantt.locale.labels.section_assignedTo = "Assigned To";  
-            gantt.locale.labels.section_status = "Status";  
-            gantt.config.lightbox.sections = [
-                {name: "description", height: 38, map_to: "text", type: "textarea", focus: true},
-                {name: "status", height: 22, map_to: "status", type: "select", options:taskStatus},
-                {name: "assignedTo", height: 22, map_to: "assignedTo", type: "select", options:contacts},
-                {name: "time", type: "duration", map_to: "auto"}
-            ];
+                    demo_tasks = result;
+                    //working Time
+		            gantt.config.work_time = true;
+		            
+		            gantt.config.grid_width = 375;
+		            gantt.config.date_grid = "%F %d";
+		            
+
+					gantt.config.scale_unit = "day";
+					gantt.config.date_scale = "%D, %d";
+					gantt.config.min_column_width = 60;
+					gantt.config.duration_unit = "day";
+					gantt.config.scale_height = 20*3;
+					gantt.config.row_height = 30;
+
+                    gantt.init("gantt_here");
+                    gantt.parse(demo_tasks);
+
+                }else {
+                    alert('got an exception '+event.message);
+                }
+                //Stop loading
+                bgLoaderDiv[0].style.display = 'none';
+            });
             
+        
             gantt.templates.task_class = function(st,end,item){
                 return item.$level==0?"gantt_project":""
             };
+            //Left-hand-side columns
             gantt.config.columns = [
                 {name:"text",       label:"Name",  width:"*", tree:true },
                 {name:"start_time",   label:"Start date",  template:function(obj){
@@ -177,23 +230,29 @@
                 {name:"duration",   label:"Duration", align:"center", width:60},
                 {name:"add",        label:"",           width:44 }
             ];
-            
-            /*  gantt.templates.tooltip_date_format=function (date){
-                var formatFunc = gantt.date.date_to_str("%Y / %m / %d %H:%i");
-                return formatFunc(date);
-            }
-            gantt.templates.tooltip_text = function(start,end,task){
-                return "<b>Task:</b> "+task.text+"<br/><b>Duration:</b> " + task.duration+"<br/><b>Start Date:</b> "+task.start_date;
-            };*/
-            
-            
-            gantt.config.grid_width = 375;
-            gantt.config.date_grid = "%F %d";
-            gantt.config.scale_height  = 60;
-            gantt.config.subscales = [
-                {unit:"month", step:1, date:"%F, %Y" },
-                { unit:"week", step:1, date:"Week #%W"}
-            ];
+           
+
+			var weekScaleTemplate = function(date){
+				var dateToStr = gantt.date.date_to_str("%d %M");
+				var weekNum = gantt.date.date_to_str("(week %W)");
+				var endDate = gantt.date.add(gantt.date.add(date, 1, "week"), -1, "day");
+				return dateToStr(date) + " - " + dateToStr(endDate) + " " + weekNum(date);
+			};
+
+			gantt.config.subscales = [
+				{unit:"month", step:1, date:"%F, %Y"},
+				{unit:"week", step:1, template:weekScaleTemplate}
+
+			];
+
+			gantt.templates.task_cell_class = function(task, date){
+				if(!gantt.isWorkTime(date))
+					return "week_end";
+				return "";
+			};
+
+			
+
             // gantt.init("gantt_here");
             // gantt.parse(demo_tasks);
             
